--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-numpy==1.17.3
-matplotlib==3.1.1
-scipy==1.3.1
 librosa==0.7.1
+numpy==1.17.3
+scipy==1.3.1
+tqdm==4.36.1
+tensorflow==1.14.0
+matplotlib==3.1.1
 torch==1.2.0
-nnmnkwii==0.0.19
-scikit_learn==0.21.3
+lws==1.2.5
